# hst508

./: .gitignore  README.md  WF.ipynb  _quarto.yml  environment.yml  pset_1.aux  pset_1.html  pset_1.ipynb  pset_1.tex  pset_2.ipynb  pyproject.toml
20230916_time_to_fixation/: 100  1000  500
pset_2_assets/: times.csv
quantgenomics/: davidPlot.py
template/: 20230120_MAMS_Manuscript.docx
utils/: path.py  plot.py
