[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["David <wudw.david@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.1"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
